; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_cbcmac_vector.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_cbcmac_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cf_aes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, i64, i8*, i64)* @cbcmac_vector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cbcmac_vector(i8* %0, i64 %1, i8* %2, i64 %3, i8* %4, i64 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca [16 x i32], align 16
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = call i32 @cf_aes_init(i32* %14, i8* %16, i64 %17)
  %19 = call i32 @cf_cbcmac_stream_init(i32* %15, i32* @cf_aes, i32* %14)
  %20 = load i8*, i8** %11, align 8
  %21 = load i64, i64* %12, align 8
  %22 = call i32 @cf_cbcmac_stream_update(i32* %15, i8* %20, i64 %21)
  %23 = getelementptr inbounds [16 x i32], [16 x i32]* %13, i64 0, i64 0
  %24 = call i32 @cf_cbcmac_stream_pad_final(i32* %15, i32* %23)
  %25 = load i64, i64* %8, align 8
  %26 = icmp eq i64 64, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @TEST_CHECK(i32 %27)
  %29 = getelementptr inbounds [16 x i32], [16 x i32]* %13, i64 0, i64 0
  %30 = load i8*, i8** %7, align 8
  %31 = call i64 @memcmp(i32* %29, i8* %30, i32 64)
  %32 = icmp eq i64 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @TEST_CHECK(i32 %33)
  ret void
}

declare dso_local i32 @cf_aes_init(i32*, i8*, i64) #1

declare dso_local i32 @cf_cbcmac_stream_init(i32*, i32*, i32*) #1

declare dso_local i32 @cf_cbcmac_stream_update(i32*, i8*, i64) #1

declare dso_local i32 @cf_cbcmac_stream_pad_final(i32*, i32*) #1

declare dso_local i32 @TEST_CHECK(i32) #1

declare dso_local i64 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
